basic personal book recs

--- a/ReadNext.html
+++ b/ReadNext.html
@@ -371,70 +371,185 @@ summary {
 <p><em>Data through 30 Aug 2020</em></p>
 <div id="highest-rated-books" class="section level2">
 <h2>Highest Rated Books</h2>
-<p>The 10 highest rated books in my library:</p>
+<p>The 10 highest rated unread books in my library that I already have access to:</p>
 <table>
 <colgroup>
-<col width="76%"></col>
-<col width="13%"></col>
-<col width="9%"></col>
+<col width="62%"></col>
+<col width="14%"></col>
+<col width="11%"></col>
+<col width="5%"></col>
+<col width="6%"></col>
 </colgroup>
 <thead>
 <tr class="header">
 <th align="left">Title</th>
 <th align="left">Author</th>
 <th align="right">Average Rating</th>
+<th align="right">kindle</th>
+<th align="right">library</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="left">Deco for Divers: Decompression Theory and Physiology</td>
-<td align="left">Mark Powell</td>
-<td align="right">4.69</td>
-</tr>
-<tr class="even">
-<td align="left">Between Pacific Tides</td>
-<td align="left">Edward F. Ricketts</td>
-<td align="right">4.66</td>
-</tr>
-<tr class="odd">
 <td align="left">The Way of Kings (The Stormlight Archive, #1)</td>
 <td align="left">Brandon Sanderson</td>
 <td align="right">4.64</td>
-</tr>
-<tr class="even">
-<td align="left">Before and After the Book Deal: A Writer’s Guide to Finishing, Publishing, Promoting, and Surviving Your First Book</td>
-<td align="left">Courtney Maum</td>
-<td align="right">4.64</td>
-</tr>
-<tr class="odd">
-<td align="left">The Ocean Almanac</td>
-<td align="left">Robert Hendrickson</td>
-<td align="right">4.60</td>
-</tr>
-<tr class="even">
-<td align="left">Linus Pauling on Peace: A Scientist Speaks Out on Humanism and World Survival</td>
-<td align="left">Linus Pauling</td>
-<td align="right">4.60</td>
-</tr>
-<tr class="odd">
-<td align="left">In the Dream House: A Memoir</td>
-<td align="left">Carmen Maria Machado</td>
-<td align="right">4.54</td>
+<td align="right">1</td>
+<td align="right">0</td>
 </tr>
 <tr class="even">
 <td align="left">Spaceman: An Astronaut’s Unlikely Journey to Unlock the Secrets of the Universe</td>
 <td align="left">Mike Massimino</td>
 <td align="right">4.54</td>
+<td align="right">0</td>
+<td align="right">1</td>
 </tr>
 <tr class="odd">
 <td align="left">Grant</td>
 <td align="left">Ron Chernow</td>
 <td align="right">4.52</td>
+<td align="right">1</td>
+<td align="right">0</td>
 </tr>
 <tr class="even">
-<td align="left">The Nature of Nature: Why We Need the Wild</td>
-<td align="left">Enric Sala</td>
-<td align="right">4.50</td>
+<td align="left">How to Be an Antiracist</td>
+<td align="left">Ibram X. Kendi</td>
+<td align="right">4.46</td>
+<td align="right">0</td>
+<td align="right">1</td>
+</tr>
+<tr class="odd">
+<td align="left">The Green Mile</td>
+<td align="left">Stephen King</td>
+<td align="right">4.45</td>
+<td align="right">1</td>
+<td align="right">0</td>
+</tr>
+<tr class="even">
+<td align="left">The Hiding Place: The Triumphant True Story of Corrie Ten Boom</td>
+<td align="left">Corrie ten Boom</td>
+<td align="right">4.43</td>
+<td align="right">0</td>
+<td align="right">1</td>
+</tr>
+<tr class="odd">
+<td align="left">A Beautifully Foolish Endeavor (The Carls, #2)</td>
+<td align="left">Hank Green</td>
+<td align="right">4.42</td>
+<td align="right">0</td>
+<td align="right">1</td>
+</tr>
+<tr class="even">
+<td align="left">Exit Strategy (The Murderbot Diaries, #4)</td>
+<td align="left">Martha Wells</td>
+<td align="right">4.41</td>
+<td align="right">1</td>
+<td align="right">0</td>
+</tr>
+<tr class="odd">
+<td align="left">East of Eden</td>
+<td align="left">John Steinbeck</td>
+<td align="right">4.38</td>
+<td align="right">1</td>
+<td align="right">0</td>
+</tr>
+<tr class="even">
+<td align="left">A Thousand Splendid Suns</td>
+<td align="left">Khaled Hosseini</td>
+<td align="right">4.38</td>
+<td align="right">1</td>
+<td align="right">0</td>
+</tr>
+</tbody>
+</table>
+</div>
+<div id="rankings" class="section level2">
+<h2>Rankings</h2>
+<p>Unread books currently available to me either on my Kindle or through Libby, ranked. Book ranking is the number of satisfied conditions below:</p>
+<ul>
+<li>average rating above 4.0</li>
+<li>highly recommended</li>
+<li>island-themed or related</li>
+<li>on a “life-changing” list</li>
+<li>on a “top 100 lifetime” list</li>
+<li>recommended by Neil DeGrasse Tyson</li>
+</ul>
+<p>The result, my top-10 to-read books:</p>
+<table style="width:100%;">
+<colgroup>
+<col width="82%"></col>
+<col width="5%"></col>
+<col width="5%"></col>
+<col width="5%"></col>
+</colgroup>
+<thead>
+<tr class="header">
+<th align="left">Title</th>
+<th align="right">ranking</th>
+<th align="right">kindle</th>
+<th align="right">library</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left">One Hundred Years of Solitude</td>
+<td align="right">3</td>
+<td align="right">1</td>
+<td align="right">0</td>
+</tr>
+<tr class="even">
+<td align="left">Middlesex</td>
+<td align="right">3</td>
+<td align="right">1</td>
+<td align="right">0</td>
+</tr>
+<tr class="odd">
+<td align="left">Creativity: Flow and the Psychology of Discovery and Invention</td>
+<td align="right">3</td>
+<td align="right">1</td>
+<td align="right">0</td>
+</tr>
+<tr class="even">
+<td align="left">Gulliver’s Travels</td>
+<td align="right">2</td>
+<td align="right">1</td>
+<td align="right">0</td>
+</tr>
+<tr class="odd">
+<td align="left">The Prince</td>
+<td align="right">2</td>
+<td align="right">0</td>
+<td align="right">1</td>
+</tr>
+<tr class="even">
+<td align="left">Hyperbole and a Half: Unfortunate Situations, Flawed Coping Mechanisms, Mayhem, and Other Things That Happened</td>
+<td align="right">2</td>
+<td align="right">0</td>
+<td align="right">1</td>
+</tr>
+<tr class="odd">
+<td align="left">Good Economics for Hard Times: Better Answers to Our Biggest Problems</td>
+<td align="right">2</td>
+<td align="right">0</td>
+<td align="right">1</td>
+</tr>
+<tr class="even">
+<td align="left">How to Be an Antiracist</td>
+<td align="right">2</td>
+<td align="right">0</td>
+<td align="right">1</td>
+</tr>
+<tr class="odd">
+<td align="left">The Way of Kings (The Stormlight Archive, #1)</td>
+<td align="right">2</td>
+<td align="right">1</td>
+<td align="right">0</td>
+</tr>
+<tr class="even">
+<td align="left">Kindred</td>
+<td align="right">2</td>
+<td align="right">0</td>
+<td align="right">1</td>
 </tr>
 </tbody>
 </table>
